--- a/kustomize-build/action.yaml
+++ b/kustomize-build/action.yaml
@@ -14,6 +14,10 @@ inputs:
     required: true
     default: "deploy/dev,deploy/prod"
     description: "List of kustomize overlay paths to build (comma separated). Example: deploy/dev,deploy/prod."
+  rendered_filename:
+    required: false
+    default: rendered.yaml
+    description: "The name of the rendered file."
   install_kustomize:
     description: "Whether to install kustomize or not"
     required: false
@@ -118,7 +122,7 @@ runs:
         )
           fi
 
-          mv $overlay/rendered/$RENDERED_FILE_NAME_FROM_PR $overlay/rendered/rendered.yaml
+          mv $overlay/rendered/$RENDERED_FILE_NAME_FROM_PR $overlay/rendered/${{ inputs.rendered_filename }}
           rm $overlay/rendered/$RENDERED_FILE_NAME_FROM_DEFAULT_BRANCH
         done
 
