--- a/kustomize-build/action.yaml
+++ b/kustomize-build/action.yaml
@@ -39,7 +39,7 @@ runs:
       shell: bash
       run: |
         echo "Installing kustomize v${{ inputs.kustomize_version }}..."
-        curl -o "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/kustomize/v${{ inputs.kustomize_version }}/hack/install_kustomize.sh"
+        curl -O "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"
         sudo chmod +x ./install_kustomize.sh
         ./install_kustomize.sh ${{ inputs.kustomize_version }}
         sudo mv kustomize /usr/local/bin/kustomize
