fix: removed kustomize script after finishing the installation
Signed-off-by: minhthong582000 <55283557+minhthong582000@users.noreply.github.com>

--- a/kustomize-build/action.yaml
+++ b/kustomize-build/action.yaml
@@ -42,6 +42,7 @@ runs:
         curl -O "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"
         sudo chmod +x ./install_kustomize.sh
         ./install_kustomize.sh ${{ inputs.kustomize_version }}
+        rm ./install_kustomize.sh
         sudo mv kustomize /usr/local/bin/kustomize
         sudo chmod +x /usr/local/bin/kustomize
         kustomize version
