fix: leave kustomize_diff output empty if there is no change in the rendered output
Signed-off-by: minhthong582000 <55283557+minhthong582000@users.noreply.github.com>

--- a/.github/workflows/test-kustomize-build.yml
+++ b/.github/workflows/test-kustomize-build.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - "kustomize-build/**/*.ya?ml"
+      - ".github/workflows/test-kustomize-build.yml"
 
 env:
   PR_REF: ${{ github.event.pull_request.head.ref }}
